# timemachine

./: .gitignore  CHANGELOG.md  CLI.md  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
HomebrewFormula/: timemachine.rb
src/: lib.rs  main.rs  models.rs  utils.rs
src/core/: content.rs  mod.rs  models.rs  restore.rs  snapshot.rs  utils.rs
