[package]
name = "timemachine"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.23", features = ["derive"] }
serde_json = "1.0.134"
serde = { version = "1.0.216", features = ["derive"] }
chrono = "0.4.39"
tempfile = "3.14.0"


[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"
