[package]
name = "timemachine"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.23", features = ["derive"] }
serde_json = "1.0.134"
serde = { version = "1.0.216", features = ["derive"] }
chrono = "0.4.39"
tempfile = "3.14.0"
sha2 = "0.10.8"
sysinfo = "0.33.1"




[profile.release]
opt-level = 3
