[package]
name = "timemachine"
version = "0.1.0"
authors = ["Michael Asiedu"]
edition = "2021"
description = "A powerful file versioning tool for tracking and managing file changes over time"
repository = "https://github.com/masiedu4/timemachine"
license = "Apache"
readme = "README.md"
keywords = ["backup", "version-control", "snapshot", "file-management"]
categories = ["command-line-utilities", "filesystem"]

[dependencies]
clap = { version = "4.5.23", features = ["derive", "cargo"] }
clap_complete = "4.5.1"
serde_json = "1.0.134"
serde = { version = "1.0.216", features = ["derive"] }
chrono = "0.4.39"
tempfile = "3.14.0"
sha2 = "0.10.8"
sysinfo = "0.33.1"
zstd = "0.13.2"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
